# c_start2

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c  mk.mak
ArrayPoint/: array.c  array_funcs.c  malloc_1.c
Data_struct/: array1.c  arrlist.c  pointer1.c  struct1.c
Memory/: memory_1.c
bisearch/: bisearch.c
bit/: bit32_64.c
char/: char_array.c  char_array_32.c
dia_photos/: arraypoint.dia  bit_byte.dia  pointer1.dia
doc/: simpleSelectionSort.md
headfiles/: array.h  array1.h  array_funcs.h  arrlist.h  bisearch.h  bit32_64.h  bool_me.h  char_array.h  globalFunc.h  malloc_1.h  memory_1.h  pointer1.h  sort.h  struct1.h
sort/: sort.c
